# Floppy-Disk-Restorer

./: .gitignore  CHANGELOG.md  README.md  TESTING.md  issues.md  pyproject.toml  setup.py  test_circular_map.py  test_convergence_graph.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/floppy_formatter/: __init__.py  __main__.py  main.py
src/floppy_formatter/analysis/: __init__.py  flux_analyzer.py  forensics.py  head_alignment.py  reporter.py  scanner.py  signal_quality.py  statistics.py
src/floppy_formatter/core/: __init__.py  device_compat.py  device_manager.py  formatter.py  geometry.py  gw_format_registry.py  recovery.py  sector_adapter.py  sector_io.py  session.py  session_manager.py  settings.py
src/floppy_formatter/data/disk_images/macintosh/: 1440K.dsk
src/floppy_formatter/gui/: __init__.py  main_window.py
src/floppy_formatter/gui/dialogs/: __init__.py  about_dialog.py  admin_warning.py  analyze_config_dialog.py  batch_verify_config_dialog.py  confirm_cancel.py  confirm_format.py  confirm_restore.py  disk_prompt_dialog.py  export_dialog.py  format_config_dialog.py  restore_config_dialog.py  scan_config_dialog.py  session_preset_dialog.py  settings_dialog.py  splash_screen.py  write_image_config_dialog.py
src/floppy_formatter/gui/models/: __init__.py  flux_data_model.py
src/floppy_formatter/gui/panels/: __init__.py  analytics_panel.py  drive_control_panel.py  operation_toolbar.py  status_strip.py
src/floppy_formatter/gui/resources/: __init__.py
src/floppy_formatter/gui/resources/sounds/: __init__.py
src/floppy_formatter/gui/screens/: __init__.py  format_screen.py  report_screen.py  restore_screen.py  scan_screen.py  session_screen.py
src/floppy_formatter/gui/styles/: __init__.py  dark_theme.qss  light_theme.qss
src/floppy_formatter/gui/tabs/: __init__.py  analysis_tab.py  diagnostics_tab.py  errors_tab.py  flux_tab.py  overview_tab.py  progress_tab.py  recovery_tab.py  verification_tab.py
src/floppy_formatter/gui/utils/: __init__.py  animations.py  drag_drop.py  sounds.py
src/floppy_formatter/gui/widgets/: __init__.py  animated_button.py  circular_sector_map.py  convergence_graph.py  flux_histogram_widget.py  flux_waveform_widget.py  loading_skeleton.py  sector_info_panel.py  sector_map_toolbar.py  session_indicator.py  timing_jitter_widget.py
src/floppy_formatter/gui/workers/: __init__.py  alignment_worker.py  analyze_worker.py  base_worker.py  batch_verify_worker.py  disk_image_worker.py  flux_capture_worker.py  format_worker.py  restore_worker.py  scan_worker.py  worker_pool.py
src/floppy_formatter/hardware/: __init__.py  codec_adapter.py  drive_calibration.py  flux_io.py  greaseweazle_device.py  gw_mfm_codec.py  mfm_codec.py  pll_decoder.py
src/floppy_formatter/imaging/: __init__.py  flux_image.py  format_registry.py  image_formats.py  image_manager.py  sector_image.py
src/floppy_formatter/recovery/: __init__.py  bit_slip_recovery.py  multi_capture.py  pll_tuning.py  surface_treatment.py
src/floppy_formatter/tui/: __init__.py  app.py  styles.tcss
src/floppy_formatter/tui/screens/: __init__.py  drive_select.py  format_screen.py  main_menu.py  report_screen.py  restore_screen.py  scan_screen.py
src/floppy_formatter/tui/widgets/: __init__.py  progress_panel.py  sector_map.py  stats_panel.py
src/floppy_formatter/utils/: __init__.py  admin_check.py  compatibility.py  context_managers.py  error_handler.py  logging.py  partial_results.py  thermal_printer.py
tests/: __init__.py  hardware_compatibility_test.py
tests/fixtures/: __init__.py  mock_devices.py
tests/integration/: __init__.py  test_format_flow.py  test_recovery_flow.py
tests/unit/: __init__.py  test_geometry.py  test_recovery.py  test_sector_io.py
wiki/: Batch-Operations.md  Configuration.md  Diagnostics.md  Exporting-Images.md  FAQ.md  Flux-Analysis.md  Formatting-Disks.md  Getting-Started.md  Hardware-Requirements.md  Home.md  Installation.md  Keyboard-Shortcuts.md  Recovery-Operations.md  SCREENSHOT_LIST.md  Scanning-Disks.md  Software-Requirements.md  Supported-Disk-Formats.md  Technical-Reference.md  Troubleshooting.md  User-Interface-Overview.md  _Sidebar.md
