[tool.poetry]
name = "floppy-formatter"
version = "0.2.0"
description = "USB floppy disk restoration tool for Linux/WSL2"
authors = ["Joshua Yewman <joshua@yewman.co.uk>"]
readme = "README.md"
packages = [{include = "floppy_formatter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.47.0"
rich = "^13.7.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.8"

[tool.poetry.scripts]
floppy-format = "floppy_formatter.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude hardware_compatibility_test.py as it's a standalone script
addopts = "--ignore=tests/hardware_compatibility_test.py -v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
